[gd_scene load_steps=10 format=3 uid="uid://dsf0flbf8igka"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Pattern/Prefab_PatternVectorPairWithDelete.gd" id="1_2vxwp"]
[ext_resource type="PackedScene" uid="uid://cmxa7e3wifiy2" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Vectors/PatternVector3Field.tscn" id="2_mjcu5"]
[ext_resource type="Texture2D" uid="uid://bc3ohcvien5j" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Triangle_Right_S.png" id="3_lvf0k"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Texture_Element.gd" id="4_vxjfh"]
[ext_resource type="Texture2D" uid="uid://lx5nndlrsglg" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_S.png" id="5_34f6o"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextureButton_Element.gd" id="6_748og"]
[ext_resource type="Texture2D" uid="uid://cp8026cf16cte" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_C.png" id="6_dnub2"]
[ext_resource type="Texture2D" uid="uid://wcrt5nk4neve" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_H.png" id="7_dtmaw"]
[ext_resource type="Texture2D" uid="uid://t5wfu23syst3" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_D.png" id="8_xd8ej"]

[node name="Prefab_PatternVectorPairWithDelete" type="HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
offset_right = 596.0
offset_bottom = 31.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource("1_2vxwp")

[node name="PV1" parent="." instance=ExtResource("2_mjcu5")]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
texture = ExtResource("3_lvf0k")
expand_mode = 1
script = ExtResource("4_vxjfh")

[node name="PV2" parent="." instance=ExtResource("2_mjcu5")]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2

[node name="DeleteButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
texture_normal = ExtResource("5_34f6o")
texture_pressed = ExtResource("6_dnub2")
texture_hover = ExtResource("7_dtmaw")
texture_disabled = ExtResource("8_xd8ej")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_748og")
scale_multiplier = 0.75

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
